# SudokuInC

./: .gitignore  CMakeLists.txt  GA.c  GAalghoritms.c  README.md  SudokuPlay  board.c  board.h  game.c  main.c  play.c  play.h  settings.c  settings.h  solver.c  sudoku  sudokuGenerator.c  sudokuGenerator.h
hFiles/: GA.h  GAalghoritms.h  game.h  globals.h  solver.h  sudokuGenerator.h
